re PR c++/30917 (ICE with friend in local class (to a function))

gcc/cp/

2007-07-28  Simon Martin  <simartin@users.sourceforge.net>
            Mark Mitchell  <mark@codesourcery.com>

        PR c++/30917
        * name-lookup.c (lookup_name_real): Non namespace-scope bindings can be
        hidden due to friend declarations in local classes.

gcc/testsuite/

2007-07-28  Simon Martin  <simartin@users.sourceforge.net>

        PR c++/30917
        * g++.dg/lookup/friend11.C: New test.

Co-Authored-By: Mark Mitchell <mark@codesourcery.com>

From-SVN: r127023